--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "canvas-confetti": "^1.5.1",
+    "mde": "^0.0.0",
+    "nanoid": "^3.3.3",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-showdown": "^2.3.1",
+    "react-split": "^2.0.14",
+    "value-js": "^1.0.0",
+    "values.js": "^2.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
