--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "canvas-confetti": "^1.5.1",
+    "firebase": "^9.8.1",
     "mde": "^0.0.0",
     "nanoid": "^3.3.3",
     "prop-types": "^15.8.1",
